--- a/bevy_mod_check_filter_macros/Cargo.toml
+++ b/bevy_mod_check_filter_macros/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bevy_mod_check_filter"
+name = "bevy_mod_check_filter_macros"
 version = "0.1.2"
 edition = "2021"
 categories = ["game-engines"]
@@ -9,12 +9,10 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/ItsDoot/bevy_mod_check_filter"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[workspace]
-members = ["bevy_mod_check_filter_macros"]
+[lib]
+proc-macro = true
 
 [dependencies]
-bevy_ecs = "0.8"
-bevy_ptr = "0.8"
-bevy_mod_check_filter_macros = { path = "./bevy_mod_check_filter_macros" }
+syn = {version = "1.0", features = ["extra-traits"]}
+quote = "1.0"
+proc-macro2 = "1.0"
